src/objects/MIBNF_Component__c.object
<CustomObject>
    <fields>
        <fullName>LO_End_Date_c__c</fullName>
        <label>Admin End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LO_First_Submission_Date__c</fullName>
        <label>Admin First Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LO_Processing_Time__c</fullName>
        <label>Admin Approval Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LO_Rejected__c</fullName>
        <formula>if (text(BNF_Status__c)=&quot;LO Rejected&quot;,&quot;YES&quot;,&quot;NO&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Admin Rejected</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LO_Rejection_Count__c</fullName>
        <label>Admin Rejection Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LO_Start_Date__c</fullName>
        <label>Admin Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_RA_Email__c</fullName>
        <description>CRM-MC-ESPSFDCQI-4427</description>
        <label>Last RA Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Last_Submitter_Email__c</fullName>
        <description>ESPSFDCQI-4911</description>
        <label>Last Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Legacy ID</label>
        <length>64</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Local_Printing__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Only available for countries who do not use special printing programs. 
If checked, printing can be split between local and “non local” printouts to select different printers.</description>
        <inlineHelpText>Only available for countries who do not use special printing programs. 
If checked, printing can be split between local and “non local” printouts to select different printers.</inlineHelpText>
        <label>Local Printing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MIBNF__c</fullName>
        <description>This Relationship maintain all child BNF connected to one Master Multi Invoice BNF Object which is also child of single Opportunity.</description>
        <label>MIBNF</label>
        <referenceTo>MIBNF2__c</referenceTo>
        <relationshipName>MIBNF_Components</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Manual_Handling_in_SAP__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When set to true, this flag indicates that the order/contract must be created manually in SAP. When set to false the order/contract will be created automatically within 30 minutes.</description>
        <inlineHelpText>When set to true, this flag indicates that the order/contract must be created manually in SAP. When set to false the order/contract will be created automatically within 30 minutes.</inlineHelpText>
        <label>Manual Handling in SAP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Max_Addendum_Count__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Max Revised Invoice Count</description>
        <label>Max_Addendum_Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Missing_Approval__c</fullName>
        <description>Under ESPSFDCQI-17870</description>
        <label>Missing Approval</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Unbilled approval</fullName>
                </value>
                <value>
                    <fullName>SOW/EOA approval</fullName>
                </value>
                <value>
                    <fullName>Revenue adjustment template approval</fullName>
                </value>
                <value>
                    <fullName>Pricing approval</fullName>
                </value>
                <value>
                    <fullName>PO vs Contract mismatch approval</fullName>
                </value>
                <value>
                    <fullName>PO approval (missing PO hard copy)</fullName>
                </value>
                <value>
                    <fullName>Payment terms</fullName>
                </value>
                <value>
                    <fullName>Margin approval</fullName>
                </value>
                <value>
                    <fullName>Discount approval</fullName>
                </value>
                <value>
                    <fullName>Credit note approval</fullName>
                </value>
                <value>
                    <fullName>Billing Model approval</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mulesoft_Force_Update__c</fullName>
        <description>CRM-MC-ESPSFDCQI-2686 - Field to allow mulesoft update to be forced</description>
        <inlineHelpText>Field to allow mulesoft update to be forced</inlineHelpText>
        <label>Mulesoft Force Update</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_Pricing_Date_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This is only available for “Daily/Official Rate” billing. If checkmark is set, the exchange rate is fixed per pricing date maintained.</description>
        <inlineHelpText>This is only available for “Daily/Official Rate” billing. If checkmark is set, the exchange rate is fixed per pricing date maintained.</inlineHelpText>
        <label>No Pricing Date Update</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Submissions__c</fullName>
        <formula>RA_Rejection_Count__c +1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>No. of Submissions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_Users_in_Processing__c</fullName>
        <label>Num Users in Processing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OLI_Json_Data_1__c</fullName>
        <label>OLI Json Data 1</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OLI_Json_Data_2__c</fullName>
        <label>OLI Json Data 2</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OLI_Json_Data_3__c</fullName>
        <label>OLI Json Data 3</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Opportunity_Id__c</fullName>
        <formula>MIBNF__r.Opportunity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>BNF&apos;s</relationshipLabel>
        <relationshipName>BNF_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Orignal_BNF__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orignal BNF</label>
        <referenceTo>MIBNF_Component__c</referenceTo>
        <relationshipLabel>Orignal BNF&apos;s</relationshipLabel>
        <relationshipName>BNF_s6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pass_thru_schedules__c</fullName>
        <description>ESPSFDCQI-13477</description>
        <label>Pass thru schedules</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bill only</fullName>
                </value>
                <value>
                    <fullName>Bill and Recognize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_Terms__c</fullName>
        <label>Payment Terms</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>0000-Default Payment Terms of Customer Master Data</fullName>
                    <default>true</default>
                    <label>0000-Default Payment Terms of Customer Master Data</label>
                </value>
                <value>
                    <fullName>0001-Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>Z150 - Payable within 150 days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>Z270-Within 270 Days Due net</fullName>
                </value>
                <value>
                    <fullName>ZA00-Payable within 30 days</fullName>
                </value>
                <value>
                    <fullName>ZA16 (10 DAYS 1%, NET 60 DAYS)</fullName>
                </value>
                <value>
                    <fullName>ZA22-10 days 1%, net 90 days</fullName>
                </value>
                <value>
                    <fullName>ZB00-Payable immediately Due net</fullName>
                </value>
                <value>
                    <fullName>ZB03-Within 21 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB05-payable within 5 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB07-payable within 7 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB10-payable within 10 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB14-payable within 14 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB15-payable within 15 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB20-payable within 20 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB21-payable within 21 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB28 – Payable within 28 days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>ZB30-Payable within 30 days from date of invoice</fullName>
                </value>
                <value>
                    <fullName>ZB3M-30 days end of month</fullName>
                </value>
                <value>
                    <fullName>ZB45-payable within 45 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB50-Payable within 50 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB60-payable within 60 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB63 - payable within 63 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB69-Payable within 32 days due net</fullName>
                </value>
                <value>
                    <fullName>ZB75-payable within 75 days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB90-Within 90 Days Due net</fullName>
                </value>
                <value>
                    <fullName>ZB97-payable immediately upon receipt</fullName>
                </value>
                <value>
                    <fullName>ZBD4-payment due 30 days after invoice date</fullName>
                </value>
                <value>
                    <fullName>ZBD5-1.5 % discount within 10 days</fullName>
                </value>
                <value>
                    <fullName>ZBD6-3 % discount within 14 days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Print_Shop__c</fullName>
        <label>Print Shop</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <inlineHelpText>Pre-filled by SFDC from Opportunity name.</inlineHelpText>
        <label>Opportunity/Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RA_End_Date__c</fullName>
        <description>Revenue analyst last approval/reject date</description>
        <label>RA End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RA_First_Submission_Date__c</fullName>
        <description>RA First submission Date</description>
        <label>RA First Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RA_Processing_Time__c</fullName>
        <description>RA BNF processing time</description>
        <label>RA Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Rejected__c</fullName>
        <formula>If( RA_Rejection_Count__c &gt; 0,1,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RA Rejected</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Rejection_Count__c</fullName>
        <label>RA Rejection Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RA_Start_Date__c</fullName>
        <description>Revenue analyst first approval/reject date</description>
        <label>RA Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RA_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Header RA User</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>BNF</relationshipLabel>
        <relationshipName>BNF_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reassigned_Comp_Revenue_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassigned Comp Revenue Analyst</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>NOT (1) AND 2</booleanFilter>
            <filterItems>
                <field>Revenue_Analyst__c.OwnerId</field>
                <operation>startsWith</operation>
                <value>00G</value>
            </filterItems>
            <filterItems>
                <field>Revenue_Analyst__c.Available_for_Selection__c</field>
                <operation>equals</operation>
                <value>TRUE</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Revenue_Analyst__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Reassigned Comp Revenue Analyst)</relationshipLabel>
        <relationshipName>BNF_s1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rejection_Reasons_Multi__c</fullName>
        <label>Rejection Reasons</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Rejection_Reasons__c</fullName>
        <inlineHelpText>Reasons Revenue Analyst rejected the BNF. An email (with link) will be sent to the person who submitted the BNF and to the Account Director. The BNF needs to be corrected and resubmitted. Contact the Revenue Analyst for detail on why the BNF was rejected.</inlineHelpText>
        <label>Rejection Reasons</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>BNF: Address Details</fullName>
                </value>
                <value>
                    <fullName>BNF: Assignee / Revenue Analyst</fullName>
                </value>
                <value>
                    <fullName>BNF: Billing / Legal Entity</fullName>
                </value>
                <value>
                    <fullName>BNF: Billing Date / Billing plan</fullName>
                </value>
                <value>
                    <fullName>BNF: Billing Frequency</fullName>
                </value>
                <value>
                    <fullName>BNF: Contract Period</fullName>
                </value>
                <value>
                    <fullName>BNF: Data Period</fullName>
                </value>
                <value>
                    <fullName>BNF: Delivery Date</fullName>
                </value>
                <value>
                    <fullName>BNF: Delivery Frequency</fullName>
                </value>
                <value>
                    <fullName>BNF: Discount</fullName>
                </value>
                <value>
                    <fullName>BNF: Duplicate Opportunity</fullName>
                </value>
                <value>
                    <fullName>BNF: Invoice Text</fullName>
                </value>
                <value>
                    <fullName>BNF: Missing EOA</fullName>
                </value>
                <value>
                    <fullName>BNF: Missing / Incorrect PO</fullName>
                </value>
                <value>
                    <fullName>BNF: Missing / Incorrect Price Calculator</fullName>
                </value>
                <value>
                    <fullName>BNF: Missing / Incorrect Rev. Adj. Template</fullName>
                </value>
                <value>
                    <fullName>BNF: Price / Currency</fullName>
                </value>
                <value>
                    <fullName>BNF: Product</fullName>
                </value>
                <value>
                    <fullName>BNF: Rejected upon request</fullName>
                </value>
                <value>
                    <fullName>BNF: Tech. issue / SAP rejection</fullName>
                </value>
                <value>
                    <fullName>BNF: WBS / Budget / Billing Model</fullName>
                </value>
                <value>
                    <fullName>EOA: Billing Terms</fullName>
                </value>
                <value>
                    <fullName>EOA: Delivery Terms</fullName>
                </value>
                <value>
                    <fullName>EOA: Payment Terms</fullName>
                </value>
                <value>
                    <fullName>EOA: Price / Currency</fullName>
                </value>
                <value>
                    <fullName>EOA: ST&amp;C</fullName>
                </value>
                <value>
                    <fullName>MDM: Incorrect output type at client level</fullName>
                </value>
                <value>
                    <fullName>Missed deadline</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PO: Payment Terms</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Retainer_Data_Value__c</fullName>
        <defaultValue>0.0</defaultValue>
        <inlineHelpText>Some clients purchase data on retainer, meaning that instead of purchasing specific data, they pay a specific amount to IMS that will be applied to future data requests. If this is such a request, indicate the amount to be placed on retainer.</inlineHelpText>
        <label>Retainer/Down Payment Data Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retainer_Opportunity_Number__c</fullName>
        <description>ESPSFDCQI-13467</description>
        <inlineHelpText>Please provide opportunity number where retainer balance should be used from</inlineHelpText>
        <label>Retainer Opportunity Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revenue_Analyst__c</fullName>
        <formula>MIBNF__r.Revenue_Analyst__r.User__r.Id</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Revenue Analyst</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_BNF_Comment__c</fullName>
        <label>Revised BNF Comment</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Revised_BNF_Date__c</fullName>
        <inlineHelpText>Date revision takes effect. For regular deliveries, it refers to the data period.</inlineHelpText>
        <label>Revised BNF Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Revised_BNF_Reason__c</fullName>
        <label>Revised BNF Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Addendum__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Additional Fees</fullName>
                </value>
                <value>
                    <fullName>Billing request (Milestone billing for example)</fullName>
                </value>
                <value>
                    <fullName>Cancellation</fullName>
                </value>
                <value>
                    <fullName>Change Billing Date / Frequency</fullName>
                </value>
                <value>
                    <fullName>Change in Contract Timing</fullName>
                </value>
                <value>
                    <fullName>Change in Distribution</fullName>
                </value>
                <value>
                    <fullName>Change in Number of Copies</fullName>
                </value>
                <value>
                    <fullName>Change in Revenue Schedule</fullName>
                </value>
                <value>
                    <fullName>Change of Address/Contact Person/Output Type</fullName>
                </value>
                <value>
                    <fullName>Change of Content</fullName>
                </value>
                <value>
                    <fullName>Change of invoice header text / invoice wording</fullName>
                </value>
                <value>
                    <fullName>Change of Payment Terms</fullName>
                </value>
                <value>
                    <fullName>Change Order/Amendment</fullName>
                </value>
                <value>
                    <fullName>Change PO number</fullName>
                </value>
                <value>
                    <fullName>Change Prices or Discounts (not Price Increase)</fullName>
                </value>
                <value>
                    <fullName>Intercompany billing</fullName>
                </value>
                <value>
                    <fullName>Other- please describe in the comments section</fullName>
                </value>
                <value>
                    <fullName>Pass Thru Expense</fullName>
                </value>
                <value>
                    <fullName>Price Increase</fullName>
                </value>
                <value>
                    <fullName>Revenue recognition request</fullName>
                </value>
                <value>
                    <fullName>T&amp;M Billing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SAP_Contract__c</fullName>
        <label>SAP Contract #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_End_Date__c</fullName>
        <label>SAP End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_First_Submission_Date__c</fullName>
        <label>SAP First Submission Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_Master_Contract__c</fullName>
        <label>SAP Master Contract #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_Processing_Time__c</fullName>
        <label>SAP Time</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_Rejection_Count__c</fullName>
        <label>SAP Rejection Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SAP_SD_Error_Group__c</fullName>
        <label>SAP SD Error Group</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SAP_SD_Error_Message__c</fullName>
        <label>SAP SD Error Message</label>
        <length>2500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SAP_StartDate__c</fullName>
        <description>SAP approval/reject start date</description>
        <label>SAP StartDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>SAP_Start_Date__c</fullName>
        <label>SAP Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Admin_Processing_Time__c</fullName>
        <formula>NULLVALUE(Sales_Processing_Time__c,0) + NULLVALUE(LO_Processing_Time__c,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>LO Time, from 6a or BNF Creation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_End_Date__c</fullName>
        <label>Sales End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Org_Code__c</fullName>
        <formula>Text(MIBNF__r.Sales_Org_Code__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales_Org_Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Processing_Time__c</fullName>
        <description>Sales time starts from when opp moves to stage 6a or BNF creation, whichever occurs more recently</description>
        <inlineHelpText>Sales time starts from when opp moves to stage 6a or BNF creation, whichever occurs more recently</inlineHelpText>
        <label>Submitter Time, from 6a or BNF Creation</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sales_Start_Date__c</fullName>
        <label>Sales Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Ship_To_Local__c</fullName>
        <formula>Ship_To__r.International_Name__c</formula>
        <label>Ship To (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_SAP_Base_Code__c</fullName>
        <formula>Ship_To__r.SAP_Reference__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To SAP Base Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_SAP_Contact_Local__c</fullName>
        <formula>Ship_To_SAP_Contact__r.Last_Name_Local__c + &quot; &quot; + Ship_To_SAP_Contact__r.First_Name_Local__c</formula>
        <label>Ship To SAP Contact (Local)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ship_To_SAP_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To SAP Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>SAP_Contact__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SAP_Contact__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Ship To SAP Contact)</relationshipLabel>
        <relationshipName>MIBNF_Components_s5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ship_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Ship To)</relationshipLabel>
        <relationshipName>MIBNF_Components_s3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Single_or_Multi_Product__c</fullName>
        <formula>if(MIBNF__r.Opportunity__r.Number_of_line_items__c&lt;=1,&quot;SINGLE&quot;,&quot;MULTI&quot;)</formula>
        <label>Single or Multi Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_Local__c</fullName>
        <label>Sold To Local</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To_SAP_Base_Code__c</fullName>
        <label>Sold To SAP Base Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sold_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sold To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Address__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>MDM Validated</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>BNF&apos;s (Sold To)</relationshipLabel>
        <relationshipName>BNF_s</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Specification__c</fullName>
        <label>Specification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Analyte</fullName>
                </value>
                <value>
                    <fullName>Class 5</fullName>
                </value>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>ICD 9</fullName>
                </value>
                <value>
                    <fullName>Manufactuer/Corp</fullName>
                </value>
                <value>
                    <fullName>Products</fullName>
                </value>
                <value>
                    <fullName>USC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Contractor_Amount__c</fullName>
        <label>Sub Contractor Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Submitted_To_LO__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Submitted To LO</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Submitter_Email__c</fullName>
        <description>Email address of the most recent BNF submitter</description>
        <inlineHelpText>Email address of the most recent BNF submitter</inlineHelpText>
        <label>Submitter Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Custom</fullName>
                </value>
                <value>
                    <fullName>Dataview</fullName>
                </value>
                <value>
                    <fullName>Partial</fullName>
                </value>
                <value>
                    <fullName>Syndicated.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_from_1st_Submission_from_RA_to_SAP__c</fullName>
        <label>Time from 1st Submission to RA to SAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_from_6a_to_SAP__c</fullName>
        <formula>Time_to_1st_RA_Submission__c + Time_from_1st_Submission_from_RA_to_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time from 6a to SAP</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Time_to_1st_RA_Submission__c</fullName>
        <description>Time to 1st RA Submission</description>
        <label>Time to 1st RA Submission</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
</CustomObject>